--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,12 +56,12 @@
     }
 
     &:after {
-      background: url(../images/snow.gif) no-repeat center/cover;
+      background: url(../src/assets/images/snow.gif) no-repeat center/cover;
       opacity: 0.1;
     }
 
     &:before {
-      background: url(../images/bg.png) no-repeat center/cover;
+      background: url(../src/assets/images/bg.png) no-repeat center/cover;
     }
   }
 
@@ -815,7 +815,7 @@
     top: 0;
     right: 20%;
     z-index: -1;
-    background: url(../images/footer.png) no-repeat center/cover;
+    background: url(../src/assets/images/footer.png) no-repeat center/cover;
   }
 
   &-top {
@@ -982,7 +982,7 @@
       bottom: 0;
       right: 0;
       z-index: -1;
-      background: url(../images/modal.png) no-repeat center/cover;
+      background: url(../src/assets/images/modal.png) no-repeat center/cover;
     }
   }
 
